# funes

./: .env  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: my_benchmark.rs
examples/docker/: Cargo.toml  Dockerfile  README.md
examples/docker/src/: main.rs
examples/latency-collection/: Cargo.toml  README.md  latency_collection.json
examples/minimal/: Cargo.toml  README.md
examples/simple/: Cargo.toml
src/: api.rs  config.rs  error.rs  fetch.rs  format.rs  handlers.rs  io.rs  latency.rs  lib.rs  main.rs  mock.rs  models.rs  server.rs  statics.rs  utils.rs  validate.rs
